Fixed typos and pagination usage